--- a/options.html
+++ b/options.html
@@ -1,314 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Options page</title>
-  <style>
-    body {
-      height: 20000px;
-      background-image: url(img/skin.png);
-      background-attachment: fixed;
-      position: relative;
-    }
+    <meta charset="UTF-8">
+    <title>Options page</title>
+    <style>
+        body {
+            height: 20000px;
+            background-image: url(img/skin.png);
+            background-attachment: fixed;
+            position: relative;
+        }
 
-    h1 {
-      color: #b0b0b0;
-    }
+        h1 {
+            color: #b0b0b0;
+        }
 
-    #wrapper {
-      width: 80%;
-      min-width: 1000px;
-      max-width: 1100px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      margin: auto;
-      margin-top: 40px;
-      padding: 30px;
-      box-sizing: border-box;
-      text-align: center;
-      background-color: #ffffff;
-    }
+        #wrapper {
+            width: 80%;
+            min-width: 1000px;
+            max-width: 1100px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            margin: auto;
+            margin-top: 40px;
+            padding: 30px;
+            box-sizing: border-box;
+            text-align: center;
+            background-color: #ffffff;
+        }
 
-    table {
-      width: 90%;
-      margin: auto;
-      border: 1px solid #c2c2c2;
-      padding: 5px;
-    }
+        table {
+            width: 90%;
+            margin: auto;
+            border: 1px solid #c2c2c2;
+            padding: 5px;
+        }
 
-    table img {
-      display: block;
-    }
+        table img {
+            display: block;
+        }
 
-    table img + img {
-      margin-top: 5px;
-      transform: rotate(180deg);
-    }
+        table img + img {
+            margin-top: 5px;
+            transform: rotate(180deg);
+        }
 
-    td {
-      border: 1px solid #c2c2c2;
-      padding: 10px;
-      padding-left: 16px;
-    }
+        td {
+            border: 1px solid #c2c2c2;
+            padding: 10px;
+            padding-left: 16px;
+        }
 
-    td img {
-      width: 100%;
-      max-width: 50px;
-    }
+        td img {
+            width: 100%;
+            max-width: 50px;
+        }
 
-    td:hover {
-      background-color: #eeeeee;
-      cursor: pointer;
-    }
+        td:hover {
+            background-color: #eeeeee;
+            cursor: pointer;
+        }
 
-    .areas {
-      position: fixed;
-      width: 58px;
-      height: 100px;
-      border: 1px dashed red;
-      cursor: pointer;
-    }
+        .areas {
+            position: fixed;
+            width: 58px;
+            height: 100px;
+            border: 1px dashed red;
+            cursor: pointer;
+        }
 
-    .areas:hover {
-      background-color: #eeeeee;
-    }
+        .areas:hover {
+            background-color: #eeeeee;
+        }
 
-    #bottom_right {
-      right: 20px;
-      bottom: 50px;
-    }
+        #bottom_right {
+            right: 20px;
+            bottom: 50px;
+        }
 
-    #top_right {
-      right: 20px;
-      top: 50px;
-    }
+        #top_right {
+            right: 20px;
+            top: 50px;
+        }
 
-    #bottom_left {
-      left: 20px;
-      bottom: 50px;
-    }
+        #bottom_left {
+            left: 20px;
+            bottom: 50px;
+        }
 
-    #top_left {
-      left: 20px;
-      top: 50px;
-    }
+        #top_left {
+            left: 20px;
+            top: 50px;
+        }
 
-    input[type=range] {
-      -webkit-appearance: none;
-      margin: 10px 0;
-      width: 100%;
-    }
+        input[type=range] {
+            -webkit-appearance: none;
+            margin: 10px 0;
+            width: 100%;
+        }
 
-    input[type=range]:focus {
-      outline: none;
-    }
+        input[type=range]:focus {
+            outline: none;
+        }
 
-    input[type=range]::-webkit-slider-runnable-track {
-      width: 100%;
-      height: 12.8px;
-      cursor: pointer;
-      animate: 0.2s;
-      box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-      background: rgba(131, 131, 251, 0.65);
-      border-radius: 25px;
-      border: 0px solid #000101;
-    }
+        input[type=range]::-webkit-slider-runnable-track {
+            width: 100%;
+            height: 12.8px;
+            cursor: pointer;
+            animate: 0.2s;
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+            background: rgba(131, 131, 251, 0.65);
+            border-radius: 25px;
+            border: 0px solid #000101;
+        }
 
-    input[type=range]::-webkit-slider-thumb {
-      box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-      border: 0px solid #000000;
-      height: 30px;
-      width: 30px;
-      /*border-radius: 50px;*/
-      background: #65001c;
-      background: url("img/thumb_brown.png") no-repeat;
-      cursor: pointer;
-      -webkit-appearance: none;
-      margin-top: -10px;
-    }
+        input[type=range]::-webkit-slider-thumb {
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+            border: 0px solid #000000;
+            height: 30px;
+            width: 30px;
+            /*border-radius: 50px;*/
+            background: #65001c;
+            background: url("img/thumb_brown.png") no-repeat;
+            cursor: pointer;
+            -webkit-appearance: none;
+            margin-top: -10px;
+        }
 
-    input[type=range]:focus::-webkit-slider-runnable-track {
-      background: rgba(131, 131, 251, 0.85);
-    }
+        input[type=range]:focus::-webkit-slider-runnable-track {
+            background: rgba(131, 131, 251, 0.85);
+        }
 
-  </style>
+    </style>
+
 </head>
 <body>
 
 <div id="wrapper">
 
-  <table>
-    <caption><h1></h1></caption>
+    <table>
+        <caption><h1></h1></caption>
 
-    <tr>
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/simple.png" height="50">
-          <img src="img/arrows/simple.png" height="50">
-        </div>
-      </td>
+        <tr>
+            <td id="simple">
+                <div class="wrap">
+                    <img src="img/arrows/simple.png" height="50">
+                    <img src="img/arrows/simple.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/blue.png" height="50">
-          <img src="img/arrows/blue.png" height="50">
-        </div>
-      </td>
+            <td id="blue">
+                <div class="wrap">
+                    <img src="img/arrows/blue.png" height="50">
+                    <img src="img/arrows/blue.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/wood.png" height="59">
-          <img src="img/arrows/wood.png" height="59">
-        </div>
-      </td>
+            <td id="wood">
+                <div class="wrap">
+                    <img src="img/arrows/wood.png" height="59">
+                    <img src="img/arrows/wood.png" height="59">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/round_wood.png" height="50">
-          <img src="img/arrows/round_wood.png" height="50">
-        </div>
-      </td>
+            <td id="round_wood">
+                <div class="wrap">
+                    <img src="img/arrows/round_wood.png" height="50">
+                    <img src="img/arrows/round_wood.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/ball_wood.png" height="70">
-          <img src="img/arrows/ball_wood.png" height="70">
-        </div>
-      </td>
+            <td id="ball_wood">
+                <div class="wrap">
+                    <img src="img/arrows/ball_wood.png" height="70">
+                    <img src="img/arrows/ball_wood.png" height="70">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/hand.png" height="85">
-          <img src="img/arrows/hand.png" height="85">
-        </div>
-      </td>
+            <td id="hand">
+                <div class="wrap">
+                    <img src="img/arrows/hand.png" height="85">
+                    <img src="img/arrows/hand.png" height="85">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/wood2.png" height="53">
-          <img src="img/arrows/wood2.png" height="53">
-        </div>
-      </td>
+            <td id="wood2">
+                <div class="wrap">
+                    <img src="img/arrows/wood2.png" height="53">
+                    <img src="img/arrows/wood2.png" height="53">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/wood3.png" height="60">
-          <img src="img/arrows/wood3.png" height="60">
-        </div>
-      </td>
+            <td id="wood3">
+                <div class="wrap">
+                    <img src="img/arrows/wood3.png" height="60">
+                    <img src="img/arrows/wood3.png" height="60">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/long.png" height="65">
-          <img src="img/arrows/long.png" height="65">
-        </div>
-      </td>
+            <td id="long">
+                <div class="wrap">
+                    <img src="img/arrows/long.png" height="65">
+                    <img src="img/arrows/long.png" height="65">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/border_wood.png" height="53">
-          <img src="img/arrows/border_wood.png" height="53">
-        </div>
-      </td>
+            <td id="border_wood">
+                <div class="wrap">
+                    <img src="img/arrows/border_wood.png" height="53">
+                    <img src="img/arrows/border_wood.png" height="53">
+                </div>
+            </td>
 
-    </tr>
+        </tr>
 
-    <tr>
+        <tr>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/red.png" height="50">
-          <img src="img/arrows/red.png" height="50">
-        </div>
-      </td>
+            <td id="red">
+                <div class="wrap">
+                    <img src="img/arrows/red.png" height="50">
+                    <img src="img/arrows/red.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/grey.png" height="50">
-          <img src="img/arrows/grey.png" height="50">
-        </div>
-      </td>
+            <td id="grey">
+                <div class="wrap">
+                    <img src="img/arrows/grey.png" height="50">
+                    <img src="img/arrows/grey.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/grey_green.png" height="50">
-          <img src="img/arrows/grey_green.png" height="50">
-        </div>
-      </td>
+            <td id="grey_green">
+                <div class="wrap">
+                    <img src="img/arrows/grey_green.png" height="50">
+                    <img src="img/arrows/grey_green.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/pentagram.png" height="50">
-          <img src="img/arrows/pentagram.png" height="50">
-        </div>
-      </td>
+            <td id="pentagram">
+                <div class="wrap">
+                    <img src="img/arrows/pentagram.png" height="50">
+                    <img src="img/arrows/pentagram.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/green_penta.png" height="50">
-          <img src="img/arrows/green_penta.png" height="50">
-        </div>
-      </td>
+            <td id="green_penta">
+                <div class="wrap">
+                    <img src="img/arrows/green_penta.png" height="50">
+                    <img src="img/arrows/green_penta.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/runa.png" height="50">
-          <img src="img/arrows/runa.png" height="50">
-        </div>
-      </td>
+            <td id="runa">
+                <div class="wrap">
+                    <img src="img/arrows/runa.png" height="50">
+                    <img src="img/arrows/runa.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/cat.png" height="50">
-          <img src="img/arrows/cat.png" height="50">
-        </div>
-      </td>
+            <td id="cat">
+                <div class="wrap">
+                    <img src="img/arrows/cat.png" height="50">
+                    <img src="img/arrows/cat.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/green_thumb.png" height="50">
-          <img src="img/arrows/green_thumb.png" height="50">
-        </div>
-      </td>
+            <td id="green_thumb">
+                <div class="wrap">
+                    <img src="img/arrows/green_thumb.png" height="50">
+                    <img src="img/arrows/green_thumb.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/brown_thumb.png" height="50">
-          <img src="img/arrows/brown_thumb.png" height="50">
-        </div>
-      </td>
+            <td id="brown_thumb">
+                <div class="wrap">
+                    <img src="img/arrows/brown_thumb.png" height="50">
+                    <img src="img/arrows/brown_thumb.png" height="50">
+                </div>
+            </td>
 
-      <td>
-        <div class="wrap">
-          <img src="img/arrows/smile.png" height="50">
-          <img src="img/arrows/smile.png" height="50">
-        </div>
-      </td>
+            <td id="smile">
+                <div class="wrap">
+                    <img src="img/arrows/smile.png" height="50">
+                    <img src="img/arrows/smile.png" height="50">
+                </div>
+            </td>
 
-    </tr>
+        </tr>
 
-  </table>
+    </table>
 
-  <h1 id="opacity_message"></h1>
+    <h1 id="opacity_message"></h1>
 
-  <input type="range" id="opacity_range" min=".05" max="1" step=".001">
+    <input type="range" id="opacity_range" min=".05" max="1" step=".001">
 
-  <h1 id="speed_message"><span id="speed_output"></span></h1>
+    <h1 id="speed_message"><span id="speed_output"></span></h1>
 
-  <input type="range" id="speed_range" min="10" max="10000">
+    <input type="range" id="speed_range" min="50" max="10000" step="50">
 
-  <h1 id="area_message"></h1>
+    <h1 id="area_message"></h1>
 
-  <div class="areas" id="bottom_right"></div>
-  <div class="areas" id="center_right"></div>
-  <div class="areas" id="top_right"></div>
-  <div class="areas" id="bottom_left"></div>
-  <div class="areas" id="center_left"></div>
-  <div class="areas" id="top_left"></div>
-  <div class="areas" id="center_bottom"></div>
+    <div class="areas" id="bottom_right"></div>
+    <div class="areas" id="center_right"></div>
+    <div class="areas" id="top_right"></div>
+    <div class="areas" id="bottom_left"></div>
+    <div class="areas" id="center_left"></div>
+    <div class="areas" id="top_left"></div>
+    <div class="areas" id="center_bottom"></div>
 
 </div>
-
-</body>
+<script src="scripts/ga.js"></script>
 <script src="scripts/Arrow.js"></script>
 <script src="scripts/Container.js"></script>
 <script src="scripts/page_scroller.js"></script>
@@ -318,5 +318,5 @@
 <script src="scripts/settings/View.js"></script>
 <script src="scripts/settings/Controller.js"></script>
 <script src="scripts/settings/initialize.js"></script>
-
+</body>
 </html>
